# SignalHandler

./: LICENSE  README.md
.github/workflows/: cmake.yml
include/: signal_handler.h
test/: CMakeLists.txt  unit_test.cpp
